# micro_search_engine

./: .gitignore  CMakeLists.txt  README.md  run.bat
datasets/: sampledata.txt
include/: ListNode.hpp  MyMap.hpp  TrieNode.hpp  micro_search_engine.hpp  read_input.hpp  utils.hpp
src/: ListNode.cpp  MyMap.cpp  TrieNode.cpp  main.cpp  micro_search_engine.cpp  read_input.cpp  utils.cpp
tests/: tests_main.cpp
